# gbif-api-client

./: .env.example  .gitignore  .ruff.toml  CHANGELOG.md  CODEBASE_REVIEW_AND_OPTIMIZATION_RECOMMENDATIONS.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_V2.2.md  TRAIT_DATABASE_TEST_RESULTS.md  TRAIT_INTEGRATION_SUMMARY.md  TRAIT_LOOKUP_README.md  V2.1_IMPROVEMENTS_SUMMARY.md  V2.2_IMPROVEMENTS_SUMMARY.md  V2.3_EXCEPTION_HANDLING_IMPROVEMENTS.md  __version__.py  app.py  app_original.py  benthic traits.ods  check_algaebase.py  gbif_client.py  getmarlin.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_species.xlsx  shark_client.py  simple_test.py  test_algaebase.py  test_button_debug.py  test_client.py  test_complete_backend.py  test_dyntaxa.py  test_mock_integration.py  test_new_methods.py  test_reactive_system.py  test_real_apis.py  (+1 more)
.github/workflows/: ci.yml
apis/: __init__.py  algaebase_api.py  base_api.py  dyntaxa_api.py  exceptions.py  freshwater_ecology_api.py  ioc_hab_api.py  ioc_toxins_api.py  mock_data.py  nordic_microalgae_api.py  obis_api.py  plankton_toolbox_api.py  shark_api.py  trait_lookup.py  trait_ontology_db.py  worms_api.py
app_modules/: __init__.py  cache.py  constants.py  exceptions.py  export.py  trait_utils.py  utils.py
app_modules/ui/: __init__.py  components.py
examples/: trait_lookup_example.py
schemas/: README.md  README_traits_template.md  biotic_to_schema_mapping.csv  bvol_with_fwe_sample.partial.xlsx  traits_freshwater.csv.bak  traits_freshwater.ttl  traits_freshwater_template.csv  traits_freshwater_vocab.csv
scripts/: convert_biotic.py  enrich_bvol_with_fwe.py  import_traits_to_db.py  run_fwe_live_check.py  test_trait_db.py  test_trait_integration.py  validate_uris.py
tests/: conftest.py  test_algaebase_api.py  test_base_api_retry.py  test_convert_biotic.py  test_fwe_api.py  test_fwe_integration.py  test_gbif_client.py  test_ioc_apis.py  test_nordic_api.py  test_obis_api.py  test_plankton_toolbox_api.py  test_rate_limit_and_concurrency.py  test_rate_limit_retry_behavior.py  test_shark_api.py  test_trait_utils.py  test_worms_api.py
www/: custom.css
