[project]
name = "marine-biodiversity-explorer"
version = "2.0.0"
description = "Comprehensive marine biodiversity data integration platform with trait ontology database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Marine Biodiversity Team"}
]
keywords = [
    "marine",
    "biodiversity",
    "GBIF",
    "SHARK",
    "WoRMS",
    "phytoplankton",
    "trait",
    "ontology",
    "oceanography"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pygbif>=0.6.3",
    "shiny>=0.6.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "shinyswatch>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gbif-api-client"
Documentation = "https://github.com/yourusername/gbif-api-client/blob/main/README.md"
Repository = "https://github.com/yourusername/gbif-api-client"
"Bug Tracker" = "https://github.com/yourusername/gbif-api-client/issues"

[project.scripts]
marine-explorer = "app:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apis", "app_modules", "app_modules.ui"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/*.py" = ["F401", "F841"]  # Ignore unused imports and variables in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "pygbif.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shiny.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=apis --cov=app_modules --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["apis", "app_modules"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
